--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,4 +1,3 @@
-server.port=8005
-configuracion.texto=Configurando entorno de desarrollo
-configuracion.autor.nombre=Ángel Bolado
-configuracion.autor.email=bolado.angel@gmail.com
+configuracion.texto=Configurando entorno de desarrollo...
+configuracion.autor.nombre=Angel Bolado Carletti
+configuracion.autor.email=bolado.angel.carletti@gmail.com
