--- a/servicio-item-dev.properties
+++ b/servicio-item-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno de desarrollo...
 configuracion.autor.nombre=Angel Bolado Carletti
-configuracion.autor.email=bolado.angel.carletti@gmail.com
+configuracion.autor.email=bolado.angel@gmail.com
