--- a/servicio-item-prod.properties
+++ b/servicio-item-prod.properties
@@ -1,4 +1,4 @@
-server.port=8005
+server.port=8007
 configuracion.texto=Configurando entorno de produccion
-configuracion.autor.nombre=Ángel Bolado
+configuracion.autor.nombre=Angel Bolado
 configuracion.autor.email=bolado.angel@gmail.com
